--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ body {
   
   );
   background-size: 300% 100%;
-  animation: glowFlow 8s cubic-bezier(0.4, 0, 0.2, 1) infinite;
   opacity: 0.1;
   position: relative;
   z-index: 1;
@@ -173,6 +172,14 @@ body {
   top: 0; left: 0;
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(
+  to bottom,
+  rgba(255, 255, 255, 0.05) 1px,
+  transparent 1px
+);
+background-size: 100% 4px;
+
+    
   background: radial-gradient(
     circle at top center,
     rgba(0, 0, 0, 0.2) 0%,
@@ -185,7 +192,7 @@ body {
     rgba(255, 255, 255, 0.015) 2px,
     transparent 2px,
     transparent 4px
-  );
+  ); 
 
   background-size: cover;
   z-index: -1;
@@ -206,7 +213,6 @@ body {
 =================================== */
 
 .center-area-wrapper {
-  box-shadow: 0 0 40px rgba(255, 255, 255, 0.05), 0 0 50px #ffffff52;
   border-radius: 230px;
 }
 
@@ -228,10 +234,10 @@ canvas {
   background: #000;
   border: none;
   border-radius: 23px;
-  box-shadow: inset 0 0 0 15px rgba(0, 0, 0, 0.176), /* Inner edge */
-    inset 0 0 8px rgb(255, 255, 255), /* Subtle inner glow */
-    0 0 0 22px rgba(0, 0, 0, 0.737),      /* First outer ring */
-    0 0 44px rgba(255, 255, 255, 0.594);       /* Second soft glow */
+  box-shadow:  0 0 0 15px rgba(0, 0, 0, 0.176), /* Inner edge */
+     0 0 8px rgb(255, 255, 255), /* Subtle inner glow */
+    0 0 0 12px rgba(0, 0, 0, 0.737),      /* First outer ring */
+    0 0 13px rgba(255, 255, 255, 0.594);       /* Second soft glow */
   height: auto;
   border-radius: 23px;
   z-index:2;
@@ -247,53 +253,53 @@ canvas:hover {
   z-index: 3;}
 
 canvas.dominant-emotion-joy {
-  box-shadow: 0 0 290px 0 rgba(255, 251, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 251, 0, 0.4);
 }
 canvas.dominant-emotion-trust {
-  box-shadow: 0 0 290px 0 rgba(0, 255, 120, 0.4);
+  box-shadow: 0 0 100px 0 rgba(0, 255, 120, 0.4);
 }
 canvas.dominant-emotion-fear {
-  box-shadow: 0 0 290px 0 rgba(0, 153, 153, 0.4);
+  box-shadow: 0 0 100px 0 rgba(0, 153, 153, 0.4);
 }
 canvas.dominant-emotion-surprise {
-  box-shadow: 0 0 290px 0 rgba(102, 0, 204, 0.4);
+  box-shadow: 0 0 100px 0 rgba(102, 0, 204, 0.4);
 }
 canvas.dominant-emotion-sadness {
-  box-shadow: 0 0 290px 0 rgba(51, 102, 204, 0.4);
+  box-shadow: 0 0 100px 0 rgba(51, 102, 204, 0.4);
 }
 canvas.dominant-emotion-disgust {
-  box-shadow: 0 0 290px 0 rgba(230, 0, 120, 0.4);
+  box-shadow: 0 0 100px 0 rgba(230, 0, 120, 0.4);
 }
 canvas.dominant-emotion-angry {
-  box-shadow: 0 0 290px 0 rgba(255, 0, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 0, 0, 0.4);
 }
 canvas.dominant-emotion-anticipation {
-  box-shadow: 0 0 290px 0 rgba(255, 128, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 128, 0, 0.4);
 }
 
 canvas.dominant-emotion-affectionate {
-  box-shadow: 0 0 290px 0 rgba(255, 200, 100, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 200, 100, 0.4);
 }
 canvas.dominant-emotion-shocked {
-  box-shadow: 0 0 290px 0 rgba(150, 50, 200, 0.4);
+  box-shadow: 0 0  0 rgba(150, 50, 200, 0.4);
 }
 canvas.dominant-emotion-contempt {
-  box-shadow: 0 0 290px 0 rgba(200, 0, 100, 0.4);
+  box-shadow: 0 0  0 rgba(200, 0, 100, 0.4);
 }
 canvas.dominant-emotion-hopeful {
-  box-shadow: 0 0 290px 0 rgba(100, 255, 180, 0.4);
+  box-shadow: 0 0  0 rgba(100, 255, 180, 0.4);
 }
 canvas.dominant-emotion-depressed {
-  box-shadow: 0 0 290px 0 rgba(100, 100, 180, 0.4);
+  box-shadow: 0 0  0 rgba(100, 100, 180, 0.4);
 }
 canvas.dominant-emotion-delight {
-  box-shadow: 0 0 290px 0 rgba(255, 220, 50, 0.4);
+  box-shadow: 0 0  0 rgba(255, 220, 50, 0.4);
 }
 canvas.dominant-emotion-anxiety {
-  box-shadow: 0 0 290px 0 rgba(50, 100, 200, 0.4);
+  box-shadow: 0 0  0 rgba(50, 100, 200, 0.4);
 }
 canvas.dominant-emotion-aggression {
-  box-shadow: 0 0 290px 0 rgba(255, 50, 50, 0.4);
+  box-shadow: 0 0  0 rgba(255, 50, 50, 0.4);
 }
 
 canvas[class='dominant-emotion'] {
@@ -419,7 +425,6 @@ canvas[class='dominant-emotion'] {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.798) 20%, rgba(0, 0, 0, 0.28) 100%);
   box-shadow: 0 0 16px rgba(255, 255, 255, 0.05), 0 0 8px #ffffff70;
   border: 1.5px solid rgba(255, 255, 255, 0.08);
-  backdrop-filter: blur(12px) saturate(130%);
   font-family: 'Chakra Petch'; 
   font-weight: 100;
   font-size: 1.9rem;
@@ -557,7 +562,6 @@ canvas[class='dominant-emotion'] {
   display: flex;
   background: #00000000;
   align-items: center;
-  backdrop-filter: blur(10px) saturate(100%);
   font-size: 0.9em;
   gap: 15px;
   flex-direction: column;
@@ -683,7 +687,6 @@ canvas[class='dominant-emotion'] {
   border-radius: 15px;
   font-family: 'Chakra Petch', 'Space Grotesk', 'Fira Code', monospace;
     background: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(12px) saturate(130%);
   color: #ffffff;
   font-weight: 600;
   margin-bottom: 20px;
@@ -753,7 +756,6 @@ canvas[class='dominant-emotion'] {
   z-index: 1000;
   padding: 0 2rem;
   background-color: rgba(10, 10, 10, 0.95); /* semi-transparent or solid */
-  backdrop-filter: blur(6px); /* optional glassy look */
   color: white;
   font-family: 'Chakra Petch', sans-serif;
   font-size: 2rem;
@@ -828,7 +830,6 @@ canvas[class='dominant-emotion'] {
   width: 250px;
   background-color: rgba(0, 0, 0, 0.9);
   border: 1px solid rgba(255, 255, 255, 0.211);
-  backdrop-filter: blur(10px);
   border-radius: 10px;
   z-index: 1000;
   display: flex;
