--- a/style.css
+++ b/style.css
@@ -221,6 +221,8 @@ canvas {
   border: none;
   border-radius: 23px;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.05), 0 0 30px #ffffffb3;
+  width: 100%;
+  height: auto;
 }
 
 
@@ -905,4 +907,70 @@ canvas[class='dominant-emotion'] {
     transform: translateY(-1px);
     opacity: 1;
   }
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    top: 25px;
+    left: 25px;
+    font-size: 1em;
+  }
+  .dropdown {
+    top: 100px;
+    left: 25px;
+    font-size: 1em;
+    max-width: 65%;
+  }
+
+  .layout {
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .column-left-column,
+  .column-right-column {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    
+  }
+
+ .speed-slider-wrapper {
+  max-width: 86%;
+  flex-direction: column;
+  align-items: center;
+ }
+
+  .main-canvas {
+    max-width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #menu-toggle {
+    top: 20px;
+    left: 20px;
+  }
+
+  #dropdown {
+    top: 80px;
+    left: 20px;
+    width: calc(100% - 40px);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
