--- a/style.css
+++ b/style.css
@@ -205,7 +205,6 @@ background-size: 100% 4px;
   flex-direction: column; /* Stack canvas and input/output vertically */
   align-items: center; /* Center horizontally within this column */
   margin: 0 20px; /* Add some horizontal margin between columns */
-  max-width: 1000px; /* Match canvas max-width */
 }
 
 /* ===================================
@@ -228,9 +227,10 @@ canvas {
 
 .main-canvas {
   width: 100%;
-  max-width: 1000px;
+  max-width: 100%;
   height: 100%;
-  max-height: 1000px;
+  max-height: 100%;
+  position: relative;
   display: flex;
   justify-content: center;
   background: #000;
@@ -240,7 +240,6 @@ canvas {
      0 0 8px rgb(255, 255, 255), /* Subtle inner glow */
     0 0 0 12px rgba(0, 0, 0, 0.737),      /* First outer ring */
     0 0 13px rgba(255, 255, 255, 0.594);       /* Second soft glow */
-  height: auto;
   border-radius: 23px;
   z-index:2;
 
@@ -957,8 +956,13 @@ canvas[class='dominant-emotion'] {
     top: 80px;
     left: 20px;
     width: calc(100% - 40px);
+    max-width: 300px;
+    font-size: 1em;
   }
 
+  .layout {
+    padding: 20px;
+  }
 
 
 
