--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html,
 body {
   background-color: #000000;
   min-height: auto;
-  margin-top: 100;
   font-family: 'Chakra Petch';
   padding: 0;
 }
@@ -83,7 +82,7 @@ body {
   display: block;
   margin: 32px 0;
   border-width: 0.1px;
-  box-shadow: #ffffff52;
+  box-shadow: 0 0 8px rgb(255, 255, 255);
   border: none;
   background: linear-gradient(
     90deg,
@@ -254,53 +253,52 @@ canvas:hover {
   z-index: 3;}
 
 canvas.dominant-emotion-joy {
-  box-shadow: 0 0 100px 0 rgba(255, 251, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 251, 0, 0.4) !important;
 }
 canvas.dominant-emotion-trust {
-  box-shadow: 0 0 100px 0 rgba(0, 255, 120, 0.4);
+  box-shadow: 0 0 100px 0 rgba(0, 255, 120, 0.4) !important;
 }
 canvas.dominant-emotion-fear {
-  box-shadow: 0 0 100px 0 rgba(0, 153, 153, 0.4);
+  box-shadow: 0 0 100px 0 rgba(0, 153, 153, 0.4) !important;
 }
 canvas.dominant-emotion-surprise {
-  box-shadow: 0 0 100px 0 rgba(102, 0, 204, 0.4);
+  box-shadow: 0 0 100px 0 rgba(102, 0, 204, 0.4) !important;
 }
 canvas.dominant-emotion-sadness {
-  box-shadow: 0 0 100px 0 rgba(51, 102, 204, 0.4);
+  box-shadow: 0 0 100px 0 rgba(51, 102, 204, 0.4) !important;
 }
 canvas.dominant-emotion-disgust {
-  box-shadow: 0 0 100px 0 rgba(230, 0, 120, 0.4);
+  box-shadow: 0 0 100px 0 rgba(230, 0, 120, 0.4) !important;
 }
 canvas.dominant-emotion-angry {
-  box-shadow: 0 0 100px 0 rgba(255, 0, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 0, 0, 0.4) !important;
 }
 canvas.dominant-emotion-anticipation {
-  box-shadow: 0 0 100px 0 rgba(255, 128, 0, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 128, 0, 0.4)  !important;
 }
-
 canvas.dominant-emotion-affectionate {
-  box-shadow: 0 0 100px 0 rgba(255, 200, 100, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 200, 100, 0.4)  !important;
 }
 canvas.dominant-emotion-shocked {
-  box-shadow: 0 0  0 rgba(150, 50, 200, 0.4);
+  box-shadow: 0 0 100px 0 rgba(150, 50, 200, 0.4) !important;
 }
 canvas.dominant-emotion-contempt {
-  box-shadow: 0 0  0 rgba(200, 0, 100, 0.4);
+  box-shadow: 0 0 100px 0 rgba(200, 0, 100, 0.4) !important;
 }
 canvas.dominant-emotion-hopeful {
-  box-shadow: 0 0  0 rgba(100, 255, 180, 0.4);
+  box-shadow: 0 0 100px 0 rgba(100, 255, 180, 0.4) !important;
 }
 canvas.dominant-emotion-depressed {
-  box-shadow: 0 0  0 rgba(100, 100, 180, 0.4);
+  box-shadow: 0 0 100px 0 rgba(100, 100, 180, 0.4) !important;
 }
 canvas.dominant-emotion-delight {
-  box-shadow: 0 0  0 rgba(255, 220, 50, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 220, 50, 0.4) !important;
 }
 canvas.dominant-emotion-anxiety {
-  box-shadow: 0 0  0 rgba(50, 100, 200, 0.4);
+  box-shadow: 0 0 100px 0 rgba(50, 100, 200, 0.4) !important;
 }
 canvas.dominant-emotion-aggression {
-  box-shadow: 0 0  0 rgba(255, 50, 50, 0.4);
+  box-shadow: 0 0 100px 0 rgba(255, 50, 50, 0.4) !important;
 }
 
 canvas[class='dominant-emotion'] {
@@ -496,7 +494,7 @@ canvas[class='dominant-emotion'] {
 @keyframes pulse-glow {
   0%,
   100% {
-    box-shaow: 0 0 6px #ffffff22;
+    box-shadow: 0 0 6px #ffffff22;
   }
   50% {
     box-shadow: 0 0 12px #0000008a;
@@ -511,8 +509,8 @@ canvas[class='dominant-emotion'] {
   50% {
     box-shadow: 0 0 20px #0000008a;
   }
-  
 }
+
 .custom-btn.pulse {
   animation: pulse-glow 3s infinite ease-in-out;
 }
@@ -776,7 +774,7 @@ canvas[class='dominant-emotion'] {
   justify-content: space-around;
   padding: 1rem;
   transition: all 0.3s ease;
-
+  
 }
 
 /* Hidden state (when not toggled) */
@@ -796,6 +794,7 @@ canvas[class='dominant-emotion'] {
   padding-right: 20px;
   padding-left: 20px;
   font-size: 3em;
+  cursor: pointer;
   color: #ffffff;
   background:#000;
   cursor: pointer;
@@ -880,22 +879,21 @@ canvas[class='dominant-emotion'] {
 .bubble {
   width: 6px;
   height: 6px;
-  background: #aaa;
+  background: #ffffff;
   border-radius: 50%;
   animation: bounce 2.3s infinite ease-in-out;
+  box-shadow: 0 0 6px #aaa;
 }
-
 .bubble:nth-child(1) {
-  animation-delay: 0;
+  animation-delay: 0s;
+}
 
+.bubble:nth-child(2) {
+  animation-delay: 0.3s;
 }
 
 .bubble:nth-child(3) {
-  animation-delay: 0.2s;
-}
-
-.bubble:nth-child(3) {
-  animation-delay: 0.4s;
+  animation-delay: 0.6s;
 }
 @keyframes bounce {
   0%, 100% {
