--- a/style.css
+++ b/style.css
@@ -1,6 +1,75 @@
+
+
+
+
+
 /* ===================================
    GLOBAL STYLES
 =================================== */
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 9px 0;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+}
+input[type="range"]::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #fff;
+}
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #fff;
+}
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: #fff;
+}
+input[type="range"]::-ms-fill-upper {
+  background: #fff;
+}
+input[type="range"]::-ms-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #fff;
+  cursor: pointer;
+}
+input[type="range"]::-ms-tooltip {
+  display: none;
+}
+
+
+
 * {
   box-sizing: border-box;
 }
@@ -17,6 +86,8 @@ body {
   animation-fill-mode: forwards;
 }
 
+
+
 @keyframes slide {
   0% {
     opacity: 0.7;
@@ -27,6 +98,9 @@ body {
     transform: translateY(0);
   }
 }
+
+
+
 
 
 .thought-log-video {
